<resources>
    <string name="app_name" translatable="false">News_GR14</string>
    #Text
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_title">Title</string>
    <string name="txt_subtitle">Subtitle</string>
    <string name="txt_abstract">Abstract</string>
    <string name="txt_category">Category</string>
    <string name="txt_body">Body</string>
    <string name="txt_img_description_articleDetail">Article image</string>
    #Buttons
    <string name="action_sign_in">Log In</string>
    <string name="btn_sel_img">Select Image</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_confirmation">CONFIRM DELETE</string>
    #Checkbox
    <string name="check_remindMe">Remind me</string>
    #Toast
    <string name="upload_error">Error uploading article. Try later!</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="delete_okay">Deleted succesfully</string>
    <string name="delete_wrong">Couldn\'t delete the article. Try later!</string>
    #Spinner categories
    <string-array name="filter">
        <item>All</item>
        <item>National</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Economy</item>
    </string-array>
    <string-array name="categories">
        <item>National</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Economy</item>
    </string-array>
    #Notifications
    <string name="notChannel_new_article">Articles</string>
    <string name="notChannel_new_article_description">Update articles</string>
    <string name="notUnder26_title">New articles are waiting you!</string>
    <string name="notUnder26_text">There are %d new articles</string>
    <string name="not_number_articles">new articles</string>
    <string name="not_number_article_just_one">new article</string>
</resources>